# heredoc

./: .gitignore  Test.hs  heredoc.cabal  heredoc.sublime-workspace
src/Text/: Here.hs  Heredoc.hs
src/Text/Heredoc/: Bindable.hs
test/: Doctest.hs  Spec.hs
