name:                heredoc
version:             0.2.0.0
synopsis:            multi-line string / here document using QuasiQuotes
description:         multi-line string / here document using QuasiQuotes

license:             PublicDomain
license-file:        LICENSE.txt

author:              James H. Fisher
maintainer:          jameshfisher@gmail.com
homepage:            http://hackage.haskell.org/package/heredoc

category:            Text

build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:   Text.Heredoc
  other-modules:     Text.Heredoc.Bindable
  build-depends:
    base >= 4 && < 5,
    template-haskell >= 2.5,
    parsec
  hs-source-dirs:    src

test-suite doctest
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Doctest.hs
  ghc-options:       -Wall
  build-depends:
    base >= 4 && < 5,
    doctest

test-suite spec
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Spec.hs
  ghc-options:       -Wall
  build-depends:
    base >= 4 && < 5,
    hspec,
    directory,
    heredoc
